# templates

./: flake.nix
bun/: flake.nix
python/: flake.nix  pyproject.toml
python/tests/: test_sum.py
